home & base page added

--- a/authsysproject/users/templates/users/base.html
+++ b/authsysproject/users/templates/users/base.html
@@ -26,10 +26,9 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-              <a class="nav-link" href="#">Market</a>
-              <a class="nav-link" href="#">Company</a>
-              <a class="nav-link" href="#">Education</a>
-              <a class="nav-link" href="#">Resouces</a>
+              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#">Contact Us</a>
 
             </div>
 
