--- a/authsysproject/users/templates/users/home.html
+++ b/authsysproject/users/templates/users/home.html
@@ -247,11 +247,11 @@
        <div class="row11">
          <div class="coll-2">
           <h3>HTML</h3>
-        <img src="html.png" width="80px" height="90px">
+        <img src="{% static 'users/images/html.png' %}" width="80px" height="90px">
       </div>
       <div class="coll-2">
         <h3>CSS</h3>
-        <img src="./css.png" width="80px" height="90px">
+        <img src="{% static 'users/images/css.png' %} " width="80px" height="90px">
       </div>
       <div class="coll-2">
         <h3 style="text-align: left;">JavaScript</h3>
@@ -259,55 +259,55 @@
         </div>
         <div class="coll-2">
           <h3>Bootstrap</h3>
-        <img src="./boot.png" width="150px" height="90px">
+        <img src="{% static 'users/images/boot.png' %}" width="150px" height="90px">
         </div>
         <div class="coll-2">
           <h3>Jquery</h3>
-        <img src="./jq.png" width="80px" height="90px">
+        <img src="{% static 'users/images/jq.png' %}" width="80px" height="90px">
         </div>
         <div class="coll-2">
           <h3 style="text-align: center;">React</h3>
-        <img src="./r2.png" width="200px" height="120px">
+        <img src="{static 'users/images/r2.png' %}" width="200px" height="120px">
         </div>
         <div class="coll-2">
           <h3>PHP</h3>
-        <img src="./php5.svg" width="150px" height="120px">
+        <img src="{% static 'users/images/php5.svg' %}" width="150px" height="120px">
         </div>
         <div class="coll-2">
           <h3>Java</h3>
-        <img src="./java.png" width="100px" height="120px">
+        <img src="{% static 'users/images/java.png' %}" width="100px" height="120px">
       </div>
         <div class="coll-2">
           <h3>Android</h3>
-        <img src="./an.png" width="100px" height="120px">
+        <img src="{% static 'users./an.png' %}" width="100px" height="120px">
       </div>
       <div class="coll-2">
         <h3>IOS</h3>
-        <img src="./apple.gif" width="80px" height="90px">
+        <img src="{% static 'users/images/apple.gif' %}" width="80px" height="90px">
       </div>
       <div class="coll-2">
         <h3>Swift</h3>
-        <img src="./swift.png" width="100px" height="120px">
+        <img src="{% static 'users/images/swift.png' %}" width="100px" height="120px">
       </div>
       <div class="coll-2">
         <h3>JSP & Servlet</h3>
-        <img src="./jsp.png" width="100px" height="120px">
+        <img src="{% static 'users/images/jsp.png' %}" width="100px" height="120px">
       </div>
       <div class="coll-3">
         <h3>PhotoShop</h3>
-        <img src="./ps1.jpg" width="100px" height="100px">
+        <img src="{% static 'users/images/ps1.jpg' %} " width="100px" height="100px">
       </div>
       <div class="coll-3">
         <h3 style="text-align: left ;">Adobe Illustrator</h3>
-        <img src="./Ai.png" width="100px" height="100px" >
+        <img src="{% static 'users/images/Ai.png' %}" width="100px" height="100px" >
       </div>
       <div class="coll-3">
         <h3>MySql</h3>
-        <img src="./mysql.png" width="100px" height="100px" >
+        <img src="{% static 'users/images/mysql.png' %}" width="100px" height="100px" >
         </div>
         <div class="coll-3">
           <h3>Python</h3>
-          <img src="./python.png" width="100px" height="100px">
+          <img src="{% static 'users/images/python.png' %}" width="100px" height="100px">
         </div>
       </div>
       </div>
