--- a/authsysproject/users/templates/users/home.html
+++ b/authsysproject/users/templates/users/home.html
@@ -267,7 +267,7 @@
         </div>
         <div class="coll-2">
           <h3 style="text-align: center;">React</h3>
-        <img src="{static 'users/images/r2.png' %}" width="200px" height="120px">
+        <img src="{% static 'users/images/r2.png' %}" width="200px" height="120px">
         </div>
         <div class="coll-2">
           <h3>PHP</h3>
@@ -279,7 +279,7 @@
       </div>
         <div class="coll-2">
           <h3>Android</h3>
-        <img src="{% static 'users./an.png' %}" width="100px" height="120px">
+        <img src="{% static 'users/images/an.png' %}" width="100px" height="120px">
       </div>
       <div class="coll-2">
         <h3>IOS</h3>
