home & base page added

--- a/authsysproject/users/templates/users/home.html
+++ b/authsysproject/users/templates/users/home.html
@@ -162,14 +162,14 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-mobile" style="color: dodgerblue; font-size: 100px;"></i></div>
-              <h4 class="title"><a href="./app.html">Application Development</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Application Development</a></h4>
               <p class="description">We develop Applications that are compatible for both desktop, android and IOS</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-tv" style="color: dodgerblue; font-size: 50px;"></i></div>
-              <h4 class="title"><a href="./web.html">Web Development</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Web Development</a></h4>
               <p class="description">We create responsive and secured websites and web applications</p>
             </div>
           </div>
@@ -177,7 +177,7 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-edit" style="color: dodgerblue; font-size: 50px;"></i></div>
-              <h4 class="title"><a href="./graphics.html">Graphics Design</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Graphics Design</a></h4>
               <p class="description">We create visual text and imagery concepts using computer softwares to
                 develop the overall layout and production design for advertisements, brochures, magazines, and corporate reports, etc.
               </p>
@@ -186,7 +186,7 @@
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-shield" style="color:dodgerblue;"></i></div>
-              <h4 class="title"><a href="./security.html">Security Solutions</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Security Solutions</a></h4>
               <p class="description">We providing security during the development stages of software systems,
                 networks and data centers, we also provide ethical hacking for organisation, companies etc</p>
             </div>
@@ -195,7 +195,7 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-database" style='font-size:48px;color:dodgerblue'></i></div>
-              <h4 class="title"><a href="./sql.html">Database Design & Management</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Database Design & Management</a></h4>
               <p class="description">We create and manage database for an organisation, companies etc with database security
               </p>
             </div>
@@ -203,7 +203,7 @@
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fa fa-book" style="color: dodgerblue; font-size: 50px;"></i></div>
-              <h4 class="title"><a href="./form.html">Online Mentoring & Classes</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Online Mentoring & Classes</a></h4>
               <p class="description">We teach programming classes online, we teach different programming
               languages, You will learn how to develop a software from scratch.
               </p>
@@ -220,7 +220,7 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="fab fa-python" style='font-size:48px;color:dodgerblue'></i></div>
-              <h4 class="title"><a href="./python.html">Python & Data Science</a></h4>
+              <h4 class="title"><a href="{% url 'register' %}">Python & Data Science</a></h4>
                 <p class="description">We create python programs and Data Science solutions.
               </p>
             </div>
@@ -247,67 +247,67 @@
        <div class="row11">
          <div class="coll-2">
           <h3>HTML</h3>
-        <img src="{% static 'users/images/html.png' %}" width="80px" height="90px">
+        <img src="{% static 'users/images/html.png' %}" width="80px" height="80px">
       </div>
       <div class="coll-2">
         <h3>CSS</h3>
-        <img src="{% static 'users/images/css.png' %} " width="80px" height="90px">
+        <img src="{% static 'users/images/css.png' %} " width="80px" height="80px">
       </div>
       <div class="coll-2">
         <h3 style="text-align: left;">JavaScript</h3>
-        <img src="{% static 'users/images/javascript-39415.png' %}" width="80px" height="100px">
+        <img src="{% static 'users/images/javascript-39415.png' %}" width="80px" height="80px">
         </div>
         <div class="coll-2">
           <h3>Bootstrap</h3>
-        <img src="{% static 'users/images/boot.png' %}" width="150px" height="90px">
+        <img src="{% static 'users/images/boot.png' %}" width="80px" height="80px">
         </div>
         <div class="coll-2">
           <h3>Jquery</h3>
-        <img src="{% static 'users/images/jq.png' %}" width="80px" height="90px">
+        <img src="{% static 'users/images/jq.png' %}" width="80px" height="80px">
         </div>
         <div class="coll-2">
           <h3 style="text-align: center;">React</h3>
-        <img src="{% static 'users/images/r2.png' %}" width="200px" height="120px">
+        <img src="{% static 'users/images/r2.png' %}" width="80px" height="80px">
         </div>
         <div class="coll-2">
           <h3>PHP</h3>
-        <img src="{% static 'users/images/php5.svg' %}" width="150px" height="120px">
+        <img src="{% static 'users/images/php5.svg' %}" width="80px" height="80px">
         </div>
         <div class="coll-2">
           <h3>Java</h3>
-        <img src="{% static 'users/images/java.png' %}" width="100px" height="120px">
+        <img src="{% static 'users/images/java.png' %}" width="80px" height="80px">
       </div>
         <div class="coll-2">
           <h3>Android</h3>
-        <img src="{% static 'users/images/an.png' %}" width="100px" height="120px">
+        <img src="{% static 'users/images/an.png' %}" width="80px" height="80px">
       </div>
       <div class="coll-2">
         <h3>IOS</h3>
-        <img src="{% static 'users/images/apple.gif' %}" width="80px" height="90px">
+        <img src="{% static 'users/images/apple.gif' %}" width="80px" height="80px">
       </div>
       <div class="coll-2">
         <h3>Swift</h3>
-        <img src="{% static 'users/images/swift.png' %}" width="100px" height="120px">
+        <img src="{% static 'users/images/swift.png' %}" width="80px" height="80px">
       </div>
       <div class="coll-2">
         <h3>JSP & Servlet</h3>
-        <img src="{% static 'users/images/jsp.png' %}" width="100px" height="120px">
+        <img src="{% static 'users/images/jsp.png' %}" width="80px" height="80px">
       </div>
       <div class="coll-3">
         <h3>PhotoShop</h3>
-        <img src="{% static 'users/images/ps1.jpg' %} " width="100px" height="100px">
+        <img src="{% static 'users/images/ps1.jpg' %} " width="80px" height="80px">
       </div>
       <div class="coll-3">
         <h3 style="text-align: left ;">Adobe Illustrator</h3>
-        <img src="{% static 'users/images/Ai.png' %}" width="100px" height="100px" >
+        <img src="{% static 'users/images/Ai.png' %}" width="80px" height="80px" >
       </div>
       <div class="coll-3">
         <h3>MySql</h3>
-        <img src="{% static 'users/images/mysql.png' %}" width="100px" height="100px" >
+        <img src="{% static 'users/images/mysql.png' %}" width="80px" height="80px" >
         </div>
         <div class="coll-3">
           <h3>Python</h3>
-          <img src="{% static 'users/images/python.png' %}" width="100px" height="100px">
+          <img src="{% static 'users/images/python.png' %}" width="80px" height="80px">
         </div>
       </div>
       </div>
@@ -840,7 +840,7 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="{% url 'home' %}">Home</a></li>
               <li><a href="#about">About us</a></li>
               <li><a href="#services">Services</a></li>
             </ul>
